--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <img class="logo" src="/assets/img/logo.jpg" alt="Fruta e Fruto">
                 <nav class="menu">
                     <ul class="menu-lista">
-                        <li class="menu-item"><a class="menu-link ativo" href="#">Inicio</a></li>
+                        <li class="menu-item"><a class="menu-link ativo" href="#">Início</a></li>
                         <li class="menu-item"><a class="menu-link" href="#">Receitas</a></li>
                         <li class="menu-item"><a class="menu-link" href="#">Quem somos</a></li>
                         <li class="menu-item"><a class="menu-link" href="#">Comunidade</a></li>
