atualizando as classes do cabeçalho, menu, banner e sobre

--- a/index.html
+++ b/index.html
@@ -18,14 +18,22 @@
         <header class="cabecalho">
             <img class="logo" src="/assets/img/logo.jpg" alt="Fruta e Fruto">
                 <nav class="menu">
-                    <ul class="menu-lista">
-                        <li class="menu-item"><a class="menu-link ativo" href="#">Início</a></li>
-                        <li class="menu-item"><a class="menu-link" href="#">Receitas</a></li>
-                        <li class="menu-item"><a class="menu-link" href="#">Quem somos</a></li>
-                        <li class="menu-item"><a class="menu-link" href="#">Comunidade</a></li>
+                    <ul class="menu__lista">
+                        <li class="menu__item"><a class="menu__link ativo" href="#">Início</a></li>
+                        <li class="menu__item"><a class="menu__link" href="#">Receitas</a></li>
+                        <li class="menu__item"><a class="menu__link" href="#">Quem somos</a></li>
+                        <li class="menu__item"><a class="menu__link" href="#">Comunidade</a></li>
                     </ul>
                 </nav>
             </img>
         </header>
+        <section class="banner">
+            <img src="" alt="" class="banner__imagem">
+            <h2 class="banner__titulo">Reaproveite melhor os alimentos!</h2>
+        </section>
+        <section class="sobre">
+            <h2 class="sobre__titulo">Receitas para economizar e ganhar saúde</h2>
+            <p class="sobre__descricao">Nossas receitas ajudam você a aproveitar melhor os alimentos, economizar, ganhar tempo e praticidade</p>
+        </section>
     </body>
 </html>
