Estlização do banner

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         <link rel="stylesheet" href="/assets/css/menu/menu-lista.css">
         <link rel="stylesheet" href="/assets/css/menu/menu-item.css">
         <link rel="stylesheet" href="/assets/css/menu/menu-link.css">
+        <link rel="stylesheet" href="assets/css/banner/banner.css">
+        <link rel="stylesheet" href="assets/css/banner/banner-imagem.css">
+        <link rel="stylesheet" href="assets/css/banner/banner-titulo.css">
     </head>
     <body>
         <header class="cabecalho">
@@ -28,7 +31,7 @@
             </img>
         </header>
         <section class="banner">
-            <img src="" alt="" class="banner__imagem">
+            <img class="banner__imagem" src="/assets/img/banner.jpg" alt="Banner">
             <h2 class="banner__titulo">Reaproveite melhor os alimentos!</h2>
         </section>
         <section class="sobre">
