--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <link rel="stylesheet" href="assets/css/banner/banner.css">
         <link rel="stylesheet" href="assets/css/banner/banner-imagem.css">
         <link rel="stylesheet" href="assets/css/banner/banner-titulo.css">
+        <link rel="stylesheet" href="assets/css/sobre/sobre.css">
+        <link rel="stylesheet" href="assets/css/sobre/sobre-descricao.css">
+        <link rel="stylesheet" href="assets/css/sobre/sobre-titulo.css">
     </head>
     <body>
         <header class="cabecalho">
