--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
         <link rel="stylesheet" href="assets/css/receita/receita-imagem.css">
         <link rel="stylesheet" href="assets/css/receita/receita-titulo.css">
         <link rel="stylesheet" href="assets/css/receitas.css">
+        <link rel="stylesheet" href="assets/css/quemSomos/quemSomos-descricao.css">
+        <link rel="stylesheet" href="assets/css/quemSomos/quemSomos-titulo.css">
+        <link rel="stylesheet" href="assets/css/quemSomos/quemSomos.css">
     </head>
     <body>
         <header class="cabecalho">
