estilizando as pessoas

--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
         <link rel="stylesheet" href="assets/css/quemSomos/quemSomos-descricao.css">
         <link rel="stylesheet" href="assets/css/quemSomos/quemSomos-titulo.css">
         <link rel="stylesheet" href="assets/css/quemSomos/quemSomos.css">
+        <link rel="stylesheet" href="assets/css/pessoas.css">
+        <link rel="stylesheet" href="assets/css/pessoa/pessoa-funcao.css">
+        <link rel="stylesheet" href="assets/css/pessoa/pessoa-imagem.css">
+        <link rel="stylesheet" href="assets/css/pessoa/pessoa-nome.css">
+        <link rel="stylesheet" href="assets/css/pessoa/pessoa.css">
+
     </head>
     <body>
         <header class="cabecalho">
