--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <link rel="stylesheet" href="assets/css/pessoa/pessoa-imagem.css">
         <link rel="stylesheet" href="assets/css/pessoa/pessoa-nome.css">
         <link rel="stylesheet" href="assets/css/pessoa/pessoa.css">
+        <link rel="stylesheet" href="assets/css/rodape.css">
 
     </head>
     <body>
@@ -128,5 +129,8 @@
                 </div>
             </div>
         </section>
+        <footer class="rodape">
+            Contato: exemplo@email.com.br
+        </footer>
     </body>
 </html>
